Update: komplette Website überarbeitet (Burger-Menü, Styles, Layout)

--- a/index.html
+++ b/index.html
@@ -159,43 +159,7 @@
     </div>
   </section>
 
-  <!-- Kontakt -->
-  <section id="kontakt" class="section section-alt">
-    <div class="container">
-      <h2>Kontakt</h2>
-      <div class="contact-grid">
-        <!-- Formspree Integration -->
-        <form class="contact-form" action="https://formspree.io/f/mgvpyzgv" method="POST">
-          <div class="form-row">
-            <label for="name">Name*</label>
-            <input id="name" name="name" type="text" required />
-          </div>
-          <div class="form-row">
-            <label for="email">E-Mail*</label>
-            <input id="email" name="email" type="email" required />
-          </div>
-          <div class="form-row">
-            <label for="message">Nachricht*</label>
-            <textarea id="message" name="message" rows="5" required></textarea>
-          </div>
-          <button class="btn" type="submit">Nachricht senden</button>
-          <p class="form-hint">* Pflichtfelder</p>
-        </form>
-
-        <div class="contact-info">
-          <ul class="contact-list">
-            <li><strong>E-Mail:</strong> <a href="mailto:info@abur-evidence.de">info@abur-evidence.de</a></li>
-            <li><strong>Telefon:</strong> <a href="tel:+4917680311112">+49 176 80311112</a></li>
-            <li><strong>Verfügbarkeit:</strong> Mo–Fr 08:00–18:00</li>
-            <li><strong>Einsatzgebiet:</strong> Europaweit</li>
-          </ul>
-          <p class="muted small">
-            Alternativ direkt per E-Mail oder Telefon – wir melden uns zeitnah.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
+<!-- Kontakt --> <section id="kontakt" class="section section-alt"> <div class="container"> <h2>Kontakt</h2> <div class="contact-grid"> <!-- Formspree Integration --> <form class="contact-form" action="https://formspree.io/f/mgvpyzgv" method="POST"> <div class="form-row"> <label for="name">Name*</label> <input id="name" name="name" type="text" required /> </div> <div class="form-row"> <label for="email">E-Mail*</label> <input id="email" name="email" type="email" required /> </div> <div class="form-row"> <label for="message">Nachricht*</label> <textarea id="message" name="message" rows="5" required></textarea> </div> <button class="btn" type="submit">Nachricht senden</button> <p class="form-hint">* Pflichtfelder</p> </form> <div class="contact-info"> <ul class="contact-list"> <li><strong>E-Mail:</strong> <a href="mailto:info@abur-evidence.de">info@abur-evidence.de</a></li> <li><strong>Telefon:</strong> <a href="tel:+4917680311112">+49 176 80311112</a></li> <li><strong>Verfügbarkeit:</strong> Mo–Fr 08:00–18:00</li> <li><strong>Einsatzgebiet:</strong> Europaweit</li> </ul> <p class="muted small"> Alternativ direkt per E-Mail oder Telefon – wir melden uns zeitnah. </p> </div> </div> </div> </section>
 
   <!-- Footer -->
   <footer class="site-footer">
