Update: Burger-Menü mobil überarbeitet, CSS angepasst

--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Header / Navigation -->
+  <!-- Header / Navigation -->yy
   <header class="site-header">
     <div class="container header-inner">
       <a href="#home" class="logo" aria-label="Abur Evidence Start">
         <span>Abur</span><span class="accent">Evidence</span>
       </a>
 
-      <!-- Burger-Button (nur auf Mobile sichtbar via CSS) -->
+      <!-- Burger-Menü-Button -->
       <button class="nav-toggle" aria-expanded="false" aria-controls="site-nav" aria-label="Menü öffnen">
-        <span class="nav-toggle-bar"></span>
-        <span class="nav-toggle-bar"></span>
-        <span class="nav-toggle-bar"></span>
+      <span class="burger-line"></span>
+      <span class="burger-line"></span>
+      <span class="burger-line"></span>
       </button>
+
 
       <!-- Hauptnavigation -->
       <nav id="site-nav" class="site-nav" aria-label="Hauptnavigation" aria-hidden="true" role="navigation">
