Update: Burger-Menü mobil überarbeitet, CSS angepasst

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Header / Navigation -->yy
+  <!-- Header / Navigation -->
   <header class="site-header">
     <div class="container header-inner">
       <a href="#home" class="logo" aria-label="Abur Evidence Start">
